Updates on disorders

--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -77,9 +77,10 @@
         <a style="color: #12558A;" href="gethelp.html">+ Get Help</a>
         <!-- https://walokhelpline.blogspot.com/ -->
         
-        <a style="cursor: pointer;" onclick="home()">Home</a>
+        <a style="cursor: pointer; color: #12558A;" onclick="home()">Home</a>
         <!-- <a style="float: left;  border-radius: 3%; cursor: pointer; " onclick="webChat()"><img src="img/tick.png" style="width: 10%; height: 10%;"/></a> -->
         <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
+        <a style="float: left; border-radius: 3%; cursor: pointer; color: #12558A;" onclick="home()"><h3>Walokhelpline</h3></a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
@@ -233,6 +234,9 @@ function home(){
 }
 function openAnxiety(){
   location.href="#";
+}
+function openAnxiety(){
+  location.href="anxiety.html";
 }
 </script>
 <!-- combine best option here -->
