--- a/explore.html
+++ b/explore.html
@@ -26,6 +26,7 @@
   <!-- https://walokhelpline.blogspot.com/ -->
   
   <a style="cursor: pointer; color: #12558A;" onclick="homepage()">Home</a>
+  <a style="float: left; color: #12558A; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
   <!-- <a style="float: left;  border-radius: 3%; cursor: pointer; " onclick="webChat()"><img src="img/tick.png" style="width: 10%; height: 10%;"/></a> -->
   <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
