--- a/gethelp.html
+++ b/gethelp.html
@@ -32,7 +32,7 @@
   </div>
 <!-- Nav Bar ending -->
 
-<div class="gcontainer" style="display: grid; padding-top: 08%; position: absolute; height: auto; width: 100%;">
+<div class="gcontainer" style="display: grid; padding-top: 12%; position: absolute; height: auto; width: 100%;">
   <div class="gtop" style="display: flexbox; width: 100%; grid-template-rows: 0fr;align-content: center; text-align: center; grid-template-columns: 1fr; background-color: transparent;">
     <h1 style="padding-top: 1%;">Reach a Counselor <span style="font-weight: 100;">Today!</span></h1> 
     <hr style="width: 85%; float: right; text-align: center;">
@@ -67,30 +67,6 @@
   </div>
 </div>
 
-<!--	Exported from Voyant Tools (voyant-tools.org).
-The iframe src attribute below uses a relative protocol to better function with both
-http and https sites, but if you're embedding this into a local web page (file protocol)
-you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
-it depends on this server.
-Feel free to change the height and width values or other styling below: -->
-<!-- <center><iframe style='width: 80%; align-content: center; height: 747px;' src='https://voyant-tools.org/tool/Cirrus/?visible=365&corpus=31333a1aedbb9f611756437ab5ae4e47'></iframe></center> -->
-
-<!-- Edited Dataset -->
-<!--	Exported from Voyant Tools (voyant-tools.org).
-The iframe src attribute below uses a relative protocol to better function with both
-http and https sites, but if you're embedding this into a local web page (file protocol)
-you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
-it depends on this server.
-Feel free to change the height and width values or other styling below: -->
-<!--	Exported from Voyant Tools (voyant-tools.org).
-  The iframe src attribute below uses a relative protocol to better function with both
-  http and https sites, but if you're embedding this into a local web page (file protocol)
-  you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
-  it depends on this server.
-  Feel free to change the height and width values or other styling below: -->
-  <!-- <iframe style='width: 80%; height: 800px;' src='https://voyant-tools.org/tool/Cirrus/?visible=345&corpus=1785315c3906f33e35ce27d1247d345f'></iframe></center> -->
-
-<!-- Sectins ends -->
 <script>
         function myFunction() {
       var x = document.getElementById("myTopnav");
@@ -111,7 +87,10 @@ Feel free to change the height and width values or other styling below: -->
                 location.href="volunteer.html";  }
                 function explore(){
                     location.href="explore.html";   }
-
+                    function openAnxiety()
+                      {
+                        location.href="anxiety.html";
+                      }
  </script>   
 </body>
 </html>
