--- a/learn.html
+++ b/learn.html
@@ -16,13 +16,13 @@
 <div class="topnav" id="myTopnav" style="background-color: #FFFFFF;color: #12558a;">
     <!-- <a href=""></a> -->
     <a style="visibility: collapse;" href="#"></a>
-    <a onclick="donatePage()">DONATE </a>
+    <a onclick="donatePage()" style="color:#12558a;">DONATE </a>
     <a target="_blank" style="color:#12558a;" href="https://walokhelpline.blogspot.com/"> Blog</a>
-    <a onclick="volunteer()">+ Volunteer</a>
-    <a onclick="explore()">+ Explore </a>
+    <a onclick="volunteer()" style="color:#12558a;">+ Volunteer</a>
+    <a onclick="explore()" style="color:#12558a;">+ Explore </a>
     <!-- <a href="index.html">+ Share</a> -->
     <a href="#" style="color: #12558a;">+ Learn</a>
-    <a onclick="gethelp()">+ Get Help</a>
+    <a onclick="gethelp()" style="color:#12558a;">+ Get Help</a>
     <a style="color: #12558a; cursor: pointer;" onclick="homepage()">Home</a>
     <a style="float: left; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
     <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
