--- a/explore.html
+++ b/explore.html
@@ -62,15 +62,15 @@ it depends on this server.
 Feel free to change the height and width values or other styling below: -->
 <iframe style='width: 90%; height: 919px;' src='https://voyant-tools.org/tool/Bubbles/?view=bubbles&corpus=1785315c3906f33e35ce27d1247d345f'></iframe>
 </center>
-<center>
+<!-- <center> -->
   <!--	Exported from Voyant Tools (voyant-tools.org).
 The iframe src attribute below uses a relative protocol to better function with both
 http and https sites, but if you're embedding this into a local web page (file protocol)
 you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
 it depends on this server.
 Feel free to change the height and width values or other styling below: -->
-<iframe style='width: 100%; height: 800px;' src='https://voyant-tools.org/?panels=cirrus%2Creader%2Ctrends%2Csummary%2Ccontexts&corpus=1785315c3906f33e35ce27d1247d345f'></iframe>
-</center>
+<!-- <iframe style='width: 100%; height: 800px;' src='https://voyant-tools.org/?panels=cirrus%2Creader%2Ctrends%2Csummary%2Ccontexts&corpus=1785315c3906f33e35ce27d1247d345f'></iframe>
+</center> -->
 
 <!-- Js Script -->
 <!-- Sectins ends -->
