--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <div class="topnav" id="myTopnav" style="background-color: transparent;color: #D9D9D9;">
         <!-- <a href=""></a> -->
         <a style="visibility: collapse;" href="#"></a>
-        <a style="color: #ddd;" href="#">DONATE </a>
-        <a style="color: #ddd;" target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
-        <a style="color: #ddd;" href="#">+ Volunteer</a>
-        <a style="color: #ddd;" href="#">+ Explore </a>
+        <a style="color: rgb(144, 189, 202);" href="#">DONATE </a>
+        <a style="color: rgb(44, 189, 202);" target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
+        <a style="color: rgb(44, 189, 202);" href="#">+ Volunteer</a>
+        <a style="color: rgb(44, 189, 202);" href="#">+ Explore </a>
         <!-- <a href="index.html">+ Share</a> -->
-        <a style="color: #ddd;" href="learn.html">+ Learn</a>
-        <a style="color: #ddd;" href="gethelp.html">+ Get Help</a>
-        <a style="color: #ddd; cursor: pointer;" onclick="homepage()">Home</a>
+        <a style="color: rgb(44, 189, 202);" href="learn.html">+ Learn</a>
+        <a style="color: rgb(44, 189, 202);" href="gethelp.html">+ Get Help</a>
+        <a style="color: rgb(44, 189, 202); cursor: pointer;" onclick="homepage()">Home</a>
         <a style="float: left; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
         <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
