Depression and Suicide pages

--- a/gethelp.html
+++ b/gethelp.html
@@ -91,6 +91,12 @@
                       {
                         location.href="anxiety.html";
                       }
+                      function openDepression(){
+                        location.href="depression.html";
+                      }
+                      function openSuicide(){
+                        location.href="suicide.html";
+                      }
  </script>   
 </body>
 </html>
