--- a/donate.html
+++ b/donate.html
@@ -16,14 +16,14 @@
 <div class="topnav" id="myTopnav" style="background-color: aliceblue;color: #4D9DD6;">
     <!-- <a href=""></a> -->
     <a style="visibility: collapse;" href="#"></a>
-    <a onclick="donatePage()">DONATE </a>
-    <a target="_blank" style="color: #4D9DD6;" href="https://walokhelpline.blogspot.com/"> Blog</a>
-    <a onclick="volunteer()">+ Volunteer</a>
-    <a onclick="explore()">+ Explore </a>
+    <a style="color: #12558a;" onclick="donatePage()">DONATE </a>
+    <a style="color: #12558a;" target="_blank" style="color: #4D9DD6;" href="https://walokhelpline.blogspot.com/"> Blog</a>
+    <a style="color: #12558a;" onclick="volunteer()">+ Volunteer</a>
+    <a style="color: #12558a;" onclick="explore()">+ Explore </a>
     <!-- <a href="index.html">+ Share</a> -->
-    <a onclick="learn()">+ Learn</a>
-    <a onclick="gethelp()">+ Get Help</a>
-    <a style="color: #4D9DD6; cursor: pointer;" onclick="homepage()">Home</a>
+    <a style="color: #12558a;" onclick="learn()">+ Learn</a>
+    <a style="color: #12558a;" onclick="gethelp()">+ Get Help</a>
+    <a style="color: #12558a; cursor: pointer;" onclick="homepage()">Home</a>
     <a style="float: left; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
     <!-- <button style="background-color:#12558A; font-size: 27px;align-content: center;" class="btn btn-primary" type="button">Reach a counselor</button> -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -31,8 +31,8 @@
     </a>
   </div>
 <!-- Nav Bar ending -->
-    <h2 style="margin: 0%; padding: 20%;">Thank You For Visiting our page. We are sorry this page is still on Development.
-    You can follow on the functinal features like the Blog and others.</h2>
+    <center><h2 style="margin: 0%; padding: 20%;">404!</h2>
+    <p>Page under maintance. We will get it on soon.</p></center>
 <!-- Js Script -->
 <!-- Sectins ends -->
 <script>
