--- a/suicide.html
+++ b/suicide.html
@@ -104,6 +104,9 @@
         #h1followup{
           font-size: medium;
         }
+        .box2{
+            visibility: hidden;
+        }
         }
         </style>
 </head>
