--- a/volunteer.html
+++ b/volunteer.html
@@ -31,7 +31,9 @@
     </a>
   </div>
 <!-- Nav Bar ending -->
-    
+    <!-- Nav Bar ending -->
+    <center><h2 style="margin: 0%; padding: 20%;">404!</h2>
+      <p>Page under maintance. We will get it on soon.</p></center>
 <!-- Js Script -->
 <!-- Sectins ends -->
 <script>
