--- a/explore.html
+++ b/explore.html
@@ -10,6 +10,12 @@
     <title>Walok Helpline-Explore</title>
     <!-- <link rel="stylesheet" href="features.css"> -->
     <link rel="stylesheet" href="style.css">
+    <style>
+.voyant1{
+  /* background-image:image(src="img/depression2.png"); */
+}
+
+    </style>
 </head>
 <body style="background-color:#FFFFFF;">
 <!-- Nav Bar -->
@@ -41,7 +47,7 @@
   you should add an explicit protocol (https if you're using voyant-tools.org, otherwise
   it depends on this server.
   Feel free to change the height and width values or other styling below: -->
-  <iframe style='width: 80%; height: 800px; margin-top: 5%;' src='https://voyant-tools.org/tool/Cirrus/?visible=345&corpus=1785315c3906f33e35ce27d1247d345f'></iframe></center>
+  <iframe id="voyant1" style='width: 80%; height: 800px; margin-top: 5%; background-image: url(img/depression2.png);' src='https://voyant-tools.org/tool/Cirrus/?visible=345&corpus=1785315c3906f33e35ce27d1247d345f'></iframe></center>
 
 
   <!-- TextArc -->
