--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -67,14 +67,14 @@
 <body style="background-color:  #eee; width: 100%;">
       <div class="topnav" style="background-color: aliceblue; z-index: 3;" id="myTopnav">
         <a style="color: #12558A;" style="visibility: collapse;" href="#"></a>
-        <a style="color: #12558A;" href="#">DONATE</a>
+        <a style="color: #12558A;" onclick="donatePage()">DONATE</a>
         <a style="color: #12558A;" target="_blank" href="https://walokhelpline.blogspot.com/"> Blog</a>
-        <a style="color: #12558A;" href="#">+ Volunteer</a>
-       <a style="color: #12558A;" href="#">+ Explore </a>
+        <a style="color: #12558A;" onclick="volunteer()">+ Volunteer</a>
+       <a style="color: #12558A;" onclick="explore()">+ Explore </a>
         <!-- <li><a href="#">+ Share</a></li> -->
         
-        <a style="color: #12558A;" href="learn.html">+ Learn</a>
-        <a style="color: #12558A;" href="gethelp.html">+ Get Help</a>
+        <a style="color: #12558A;" onclick="learn()">+ Learn</a>
+        <a style="color: #12558A;" onclick="gethelp()">+ Get Help</a>
         <!-- https://walokhelpline.blogspot.com/ -->
         
         <a style="cursor: pointer; color: #12558A;" onclick="home()">Home</a>
@@ -130,6 +130,11 @@
       <div onclick="openEatingdisorder()"><p>Eating Disorder</p></div>
       <div onclick="openEmotionalabuse()"><p>Emotional Abuse</p></div>
       <div onclick="openCovid()"><p>Corona Virus Effect</p></div>
+    </div>
+    <div class="flex-container2">
+      <div onclick="opensms()" style="background-color: green; color: white;"><p>Text us - SMS</p></div>
+      <div href="https://tawk.to/chat/63d1499ec2f1ac1e202f8ed3/1gnkof51e" onclick="openweb()"  style="background-color: brown; color: white;" ><p>Text us - Web Chat</p></div>
+      <div onclick="openhone()"  style="background-color:indigo; color: white;" ><p>Call us</p></div>
     </div>
     <!-- <div class="flex-container2">
       <div>1</div>
@@ -215,10 +220,18 @@
 <!-- Swiper Js snippet -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script>
-function webChat(){
-  // location.href="https://tawk.to/chat/63d1499ec2f1ac1e202f8ed3/1gnkof51e";
-  window.open('https://tawk.to/chat/63d1499ec2f1ac1e202f8ed3/1gnkof51e','_blank');
-}
+ function openweb(){
+//  popup.classList.remove("open-popup");
+    location.href="https://tawk.to/chat/63d1499ec2f1ac1e202f8ed3/1gnkof51e";
+   }
+  
+  function opensms(){
+  // popup.classList.remove("open-popup");
+  location.href="sms:256788931578?&body=Walok";
+  }
+  function openhone(){
+    location.href="tel:+256788931578";
+  }
 
 function myFunction() {
   var x = document.getElementById("myTopnav");
@@ -232,12 +245,27 @@ function myFunction() {
 function home(){
   location.href="index.html";
 }
+
+function homepage(){
+    location.href="Walokhelpline.html";
+}
+function gethelp(){
+    location.href="gethelp.html"; }
+    function donatePage(){
+        location.href="donate.html"; }
+        function volunteer(){
+            location.href="volunteer.html";  }
+            function explore(){
+                location.href="explore.html";   }
+                function learn(){
+                location.href="learn.html";   }
 function openAnxiety(){
   location.href="#";
 }
 function openAnxiety(){
   location.href="anxiety.html";
 }
+
 </script>
 <!-- combine best option here -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -378,4 +406,7 @@ function openAnxiety(){
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
+
+
+
 </html>
