--- a/explore.html
+++ b/explore.html
@@ -11,10 +11,10 @@
     <!-- <link rel="stylesheet" href="features.css"> -->
     <link rel="stylesheet" href="style.css">
     <style>
-.voyant1{
-  /* background-image:image(src="img/depression2.png"); */
-}
+ @media screen and (max-width: 885px){
 
+  
+ }
     </style>
 </head>
 <body style="background-color:#FFFFFF;">
