--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -259,13 +259,16 @@ function gethelp(){
                 location.href="explore.html";   }
                 function learn(){
                 location.href="learn.html";   }
-function openAnxiety(){
-  location.href="#";
-}
+// THE LINKS FOR disorders
 function openAnxiety(){
   location.href="anxiety.html";
 }
-
+function openDepression(){
+  location.href="depression.html";
+}
+function openSuicide(){
+  location.href="suicide.html"
+}
 </script>
 <!-- combine best option here -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
