--- a/anxiety.html
+++ b/anxiety.html
@@ -288,7 +288,7 @@
               <a href="#!" class="text-reset">Our Mission</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Career & Volunteer</a>
+              <a href="volunteerandcareer.html" class="text-reset">Career & Volunteer</a>
             </p>
             <p>
               <a href="#!" class="text-reset">Closest Help</a>
@@ -313,13 +313,14 @@
               Work With Us
             </h6>
             <p>
-              <a href="#!" class="text-reset">Submit your story</a>
+              <!-- mailto:test@example.com?subject=Testing out mailto!&body=This is only a test! -->
+            <a href="mailto:info@walokhelpline.org?subject=Submitting a Story!&body=Walok, I would love to share you everyone my story: My Story -! " class="text-reset">Submit your story</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Partner with us</a>
+            <a href="mailto:info@walokhelpline.org?subject=Seeking a Partnership!body=Walok, We would Love to Partner. And this is about us;" class="text-reset">Partner with us</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Advertise with us</a>
+              <a href="mailto:info@walokhelpline.org?subject=Advertisment" class="text-reset">Advertise with us</a>
             </p>
             <p>
               <a href="#!" class="text-reset">Donate</a>
@@ -400,11 +401,12 @@ function gethelp(){
     function donatePage(){
         location.href="donate.html"; }
         function volunteer(){
-            location.href="#";  }
+            location.href="volunteer.html";  }
             function explore(){
                 location.href="explore.html";   }
                 function learn(){
                 location.href="learn.html";   }
+
 
 </script>  
 <!-- End f scripts -->
