--- a/gethelp.html
+++ b/gethelp.html
@@ -97,6 +97,10 @@
                       function openSuicide(){
                         location.href="suicide.html";
                       }
+                      function openLonliness(){
+                        location.href="loneliness.html";
+                      }
+                      
  </script>   
 </body>
 </html>
