--- a/Walokhelpline.html
+++ b/Walokhelpline.html
@@ -268,7 +268,10 @@ function openDepression(){
 }
 function openSuicide(){
   location.href="suicide.html"
+}function openLonliness(){
+  location.href="loneliness.html"
 }
+
 </script>
 <!-- combine best option here -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
