--- a/depression.html
+++ b/depression.html
@@ -36,7 +36,7 @@
         h1{
             font-weight: 900;
             padding: 2%;
-            font-size: 75px;
+            font-size: 45px;
         }
         #h1followup{
             font-size: 25px;
@@ -47,7 +47,7 @@
         h2{
             font-weight: 800;
             padding: 2%;
-            font-size: 50px;
+            font-size: 30px;
         }
         #h2followup{
             padding-left: 2%;
@@ -388,7 +388,7 @@ function gethelp(){
     function donatePage(){
         location.href="donate.html"; }
         function volunteer(){
-            location.href="volnteer.html";  }
+            location.href="volunteer.html";  }
             function explore(){
                 location.href="explore.html";   }
                 function learn(){
