--- a/loneliness.html
+++ b/loneliness.html
@@ -34,9 +34,9 @@
         padding:0em;
         }
         h1{
-            font-weight: 900;
+            font-weight: 700;
             padding: 2%;
-            font-size: 75px;
+            font-size: 45px;
         }
         #h1followup{
             font-size: 25px;
@@ -47,7 +47,7 @@
         h2{
             font-weight: 500;
             padding: 2%;
-            font-size: 40px;
+            font-size: 35px;
         }
         h4{
             padding: 2%;   
@@ -67,8 +67,11 @@
             text-align: justify;
         }
         @media screen and (max-width: 600px) {
+          body{
+            color: #12558a;
+          }
           h1{
-            font-size: 40px;
+            font-size: 30px;
           }
             #h1followup{
             width: 96%;
@@ -377,7 +380,7 @@ function gethelp(){
     function donatePage(){
         location.href="donate.html"; }
         function volunteer(){
-            location.href="volnteer.html";  }
+            location.href="volunteer.html";  }
             function explore(){
                 location.href="explore.html";   }
                 function learn(){
