--- a/suicide.html
+++ b/suicide.html
@@ -11,6 +11,9 @@
     <!-- <link rel="stylesheet" href="features.css"> -->
     <link rel="stylesheet" href="style.css">
     <style>
+        body{
+            /* color: #12558a; */
+          }
         .wrapper-flow{
            position: relative;
            width: 100%;
@@ -81,6 +84,9 @@
 
         }
         @media screen and (max-width: 885px){
+          body{
+            color: #12558a;
+          }
             h1{
             font-size: 35px;
           }
