--- a/depression.html
+++ b/depression.html
@@ -78,6 +78,9 @@
 
         }
         @media screen and (max-width: 885px){
+          body{
+            color: #12558a;
+          }
             h1{
             font-size: 35px;
           }
