--- a/suicide.html
+++ b/suicide.html
@@ -11,9 +11,9 @@
     <!-- <link rel="stylesheet" href="features.css"> -->
     <link rel="stylesheet" href="style.css">
     <style>
-        body{
-            /* color: #12558a; */
-          }
+        /* body{
+            color: #12558a;
+          } */
         .wrapper-flow{
            position: relative;
            width: 100%;
