--- a/learn.html
+++ b/learn.html
@@ -21,7 +21,7 @@
     <a onclick="volunteer()" style="color:#12558a;">+ Volunteer</a>
     <a onclick="explore()" style="color:#12558a;">+ Explore </a>
     <!-- <a href="index.html">+ Share</a> -->
-    <a href="#" style="color: #12558a;">+ Learn</a>
+    {% comment %} <a href="#" style="color: #12558a;">+ Learn</a> {% endcomment %}
     <a onclick="gethelp()" style="color:#12558a;">+ Get Help</a>
     <a style="color: #12558a; cursor: pointer;" onclick="homepage()">Home</a>
     <a style="float: left; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
