Updating on the learn Link

--- a/explore.html
+++ b/explore.html
@@ -37,7 +37,7 @@
  <a style="color: #12558A;" href="#">+ Explore </a>
   <!-- <li><a href="#">+ Share</a></li> -->
   
-  {% comment %} <a style="color: #12558A;" onclick="learn()">+ Learn</a> {% endcomment %}
+  <!---<a style="color: #12558A;" onclick="learn()">+ Learn</a>-->
   <a style="color: #12558A;" onclick="gethelp()">+ Get Help</a>
   <!-- https://walokhelpline.blogspot.com/ -->
   
