--- a/gethelp.html
+++ b/gethelp.html
@@ -21,7 +21,7 @@
     <a style="color: #12558A;" onclick="volunteer()">+ Volunteer</a>
     <a style="color: #12558A;" onclick="explore()">+ Explore </a>
     <!-- <a href="index.html">+ Share</a> -->
-    {% comment %} <a style="color: #12558A;" onclick="learn()">+ Learn</a> {% endcomment %}
+    <!---<a style="color: #12558A;" onclick="learn()">+ Learn</a>-->
     <a style="color: #12558A;" href="#">+ Get Help</a>
     <a style="color:#12558A; cursor: pointer;" onclick="homepage()">Home</a>
     <a style="float: left; color: #12558A; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
