--- a/donate.html
+++ b/donate.html
@@ -21,7 +21,7 @@
     <a style="color: #12558a;" onclick="volunteer()">+ Volunteer</a>
     <a style="color: #12558a;" onclick="explore()">+ Explore </a>
     <!-- <a href="index.html">+ Share</a> -->
-    {% comment %} <a style="color: #12558a;" onclick="learn()">+ Learn</a> {% endcomment %}
+    <!---<a style="color: #12558A;" onclick="learn()">+ Learn</a>-->
     <a style="color: #12558a;" onclick="gethelp()">+ Get Help</a>
     <a style="color: #12558a; cursor: pointer;" onclick="homepage()">Home</a>
     <a style="float: left; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
