--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a style="color: rgb(44, 189, 202);" onclick="volunteer()">+ Volunteer</a>
         <a style="color: rgb(44, 189, 202);" onclick="explore()">+ Explore </a>
         <!-- <a href="index.html">+ Share</a> -->
-        {% comment %} <a style="color: rgb(44, 189, 202);" href="learn.html">+ Learn</a> {% endcomment %}
+        <!---<a style="color: #12558A;" onclick="learn()">+ Learn</a>-->
         <a style="color: rgb(44, 189, 202);"onclick="gethelp()">+ Get Help</a>
         <a style="color: rgb(44, 189, 202); cursor: pointer;" onclick="homepage()">Home</a>
         <a style="float: left; border-radius: 3%; cursor: pointer;" onclick="home()"><h3>Walokhelpline</h3></a>
